example/lib/src/generated/errors/errors_localization_ur.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Urdu (`ur`).
class ErrorsLocalizationUr extends ErrorsLocalization {
  ErrorsLocalizationUr([String locale = 'ur']) : super(locale);

  @override
  String get error => 'ایک خرابی پیش آئی';

  @override
  String get unexpectedError => 'ایک غیر متوقع خرابی واقع ہوئی';

  @override
  String get bugReportSentText => 'بگ رپورٹ کامیابی سے بھیجی گئی.';
}
